Adapt the program to work on Windows. Now the program identifies the OS and adapt itself to the OS.